syntax = "proto3";

package gchat;

message UserContent {
    string username = 1;
    string password = 2;
	string chatName = 3;
	int32 ReceiverPort = 4;
}

message ChatMessage {
    int32 Sequence = 1;
    string Msg = 2;
	string Chat = 3;
	string Timestamp = 4;
	string Username = 5;

}

message RegisterResponse {
    string token = 1;
}

message LoginResponse {
    string token = 1;
}

message LogoutResponse {
    string token = 1;
}

message MessageResponse {
    bool val = 1;
}

message Chats {
	int32 chatID = 1;
	string chatName = 2;
}

message Response {
	bool success = 1;
}

service Receiver {
	rpc ReceiveMessage(ChatMessage) returns (MessageResponse){}
}

service ChatService {
    rpc Register(UserContent) returns (RegisterResponse) {}
    rpc Login(UserContent) returns (LoginResponse) {}
    rpc Logout(UserContent) returns (LogoutResponse) {}
    rpc SendMessage(ChatMessage) returns (MessageResponse) {}
	rpc GetChats(RegisterResponse) returns (stream Chats) {}
	rpc CreateChat(Chats) returns (Response) {}
}
